--- a/catch-of-the-day/package.json
+++ b/catch-of-the-day/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "concurrently": "3.5.1",
+    "gh-pages": "^1.1.0",
     "react-scripts": "1.1.1"
   },
   "dependencies": {
