--- a/catch-of-the-day/package.json
+++ b/catch-of-the-day/package.json
@@ -19,12 +19,16 @@
     "serve": "^6.5.0",
     "stylus": "0.54.5"
   },
+  "homepage": "http://wingchhun.github.io/ReactJSForBeginners",
   "scripts": {
     "start": "react-scripts start",
     "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "styles": "stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
-    "styles:watch": "stylus -u autoprefixer-stylus -w ./src/css/style.styl -o ./src/css/style.css"
+    "styles:watch": "stylus -u autoprefixer-stylus -w ./src/css/style.styl -o ./src/css/style.css",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   }
 }
